# C-Moon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  asm.s  build.zig  build.zig.zon  c-moon.cabal  output  output.s  test.c  test_file  test_file.s
.github/workflows/: cmake-single-platform.yml
app/: Main.hs
compiler/: CMakeLists.txt  Cargo.toml
compiler/src/: lexer.rs  main.c  main.cpp  main.rs  parser.rs
include/: ast.hpp  lexer.hpp  parser.hpp  token.hpp
src/: Parser.hs  ast.cpp  ast.rs  errors.h  lexer.cpp  lexer.rs  lexer.zig  lib.rs  main.cpp  main.rs  main.zig  parser.cpp  parser.rs  token.cpp  token.zig  tokens.zig
src/backend/: emit.rs  liveness.rs  lowering.rs  mod.rs  pipeline.rs  regalloc.rs  x86.rs
src/driver/: cli.rs  diagnostics.rs  mod.rs
src/errors/: errors.cpp  errors.h
src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  renamer.rs  semantic.rs
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/middle/: algsimpl.rs  constfold.rs  constprop.rs  dce.rs  desuger.rs  ir.rs  lowering.rs  mod.rs  pass.rs
src/parser/: ast.cpp  ast.h  parser.cpp  parser.h
src/printer/: ast_printer.rs  ir_printer.rs  mod.rs
src/utils/: result.h
src/utils/errors/: errors.cpp  errors.h
tests/: e2e.rs  optimizations.rs
tests/lexer/: test.cpp  test_failure.cpp  test_success.cpp
tests/parser/: test_failure.cpp  test_success.cpp
